objects/X11_Case_Config_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Choices__c</fullName>
        <label>Answer Choices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Field_API_Name__c</fullName>
        <label>Answer Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Config_Link__c</fullName>
        <formula>Case_Configuration__r.Case_Configuration_Link_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Config Link</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Configuration__c</fullName>
        <label>Case Configuration</label>
        <referenceTo>X11_Case_Metadata_Type__c</referenceTo>
        <relationshipName>Case_Config_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Question__c</fullName>
        <label>Case Question</label>
        <referenceTo>X11_Case_Question__c</referenceTo>
        <relationshipName>Case_Config_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Questions_Link__c</fullName>
        <formula>Case_Question__r.Case_Question_Link_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Questions Link</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_on_Load__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display on Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Only_for_Internal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only for Internal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Answer__c</fullName>
        <label>Parent Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>X11_Case_Question__c</referenceTo>
        <relationshipLabel>Case Questions Configurations (Parent Question)</relationshipLabel>
        <relationshipName>Case_Questions_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Questions Configuration</label>
    <nameField>
        <label>Case Config_Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Questions Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>